--- a/UdemyIdentityServer.Client1/appsettings.json
+++ b/UdemyIdentityServer.Client1/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Client": {
+    "Client": "Client1",
+    "ClientSecret": "secret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
