--- a/UdemyIdentityServer.Client1/UdemyIdentityServer.Client1.csproj
+++ b/UdemyIdentityServer.Client1/UdemyIdentityServer.Client1.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="IdentityModel" Version="5.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
