--- a/UdemyIdentityServer.AuthServer/appsettings.json
+++ b/UdemyIdentityServer.AuthServer/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "LocalDb": "Data Source=BLACKMONSTER\\SQLEXPRESS;Initial Catalog=UdemyIdentityServerMembershipDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "AllowedHosts": "*"
 }
