--- a/UdemyIdentityServer.Client1/appsettings.json
+++ b/UdemyIdentityServer.Client1/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "AuthServer": {
+    "Url": "https://localhost:5001"
+  },
+
+  "Client1ResourceOwnerMvc": {
+    "ClientId": "Client1-ResourceOwner-Mvc",
+    "ClientSecret": "secret"
+  },
+
   "Client": {
     "ClientId": "Client1",
     "ClientSecret": "secret"
