--- a/UdemyIdentityServer-IdentityAPI.AuthServer/appsettings.json
+++ b/UdemyIdentityServer-IdentityAPI.AuthServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Data Source=BLACKMONSTER\\SQLEXPRESS;Initial Catalog=UdemyIdentityServerMembershipDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
